related work wibbles.

--- a/RV2015/Related.tex
+++ b/RV2015/Related.tex
@@ -1,7 +1,7 @@
 \section{Related Work}\label{sec:related}
 The research reported on here builds on recent  research conducted in a number
 of areas including formal verification, functional programming and
-eDSL design, and RV.  
+DSL design, and RV. 
 
 Copilot has many features common to other RV frameworks aimed at
  monitoring distributed or real-time systems.  
@@ -18,7 +18,7 @@ their systems.
 %do not make the assumptions that the target programs are hard real-time
 %themselves.
 
-Haskell eDSLs are of growing popularity and given that they are all
+Haskell-based DSLs are of growing popularity and given that they are all
 embedded into the same programming language, they share many
 similarities with Copilot. For instance, 
  Kansas Lava~\cite{Gill:14:DSLs}, which is designed for
